# tachikoma

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.sqlx/: query-3463d8ca083ef31992f726aa741c6e93a80272aa920648b62541794737702c68.json  query-b040e38cd3d63d292f03708732ea5c718322d62347237d89ff20c6c120f34080.json  query-ccbea1ddf5db59e67af632a5971ae719f60f4d0ed2599d86cc21fe9dc14f096f.json
assets/: tailwindcss.css
configuration/: base.toml
goapi/: functions.go  go.mod  go.sum  main.go  types.go
src/: configuration.rs
src/bot/: handlers.rs  mod.rs
src/db/: mod.rs
src/ldap/: mod.rs
src/logic/: message_senders.rs  notifications.rs  release.rs
src/web/: mod.rs  templates.rs
src/web/auth/: middleware.rs
templates/: hosts_page_base.html
tests/: notifications.rs
tests/support/: generator.rs
