[package]
name = "tachikoma"
version = "0.3.3"
edition = "2024"
repository = "https://github.com/udv-group/tachikoma"
default-run = "tachikoma"

[dependencies]
anyhow = "^1.0"
askama = { version = "0.15" }
async-trait = "0.1.89"
axum = { version = "0.8", features = ["macros"] }
axum-flash = { git = "https://github.com/mikhailantoshkin/axum-flash", rev = "7f4a9ac349085a59479ff30407f154d411e6837d" }
axum-login = "0.18"
chrono = { version = "0.4.44", default-features = false, features = [
    "now",
    "serde",
] }
config = { version = "^0.15" }
dotenv = "0.15.0"
futures-concurrency = "^7.7"
hyper = "1.7.0"
ipnetwork = { version = "0.21", features = ["serde"] }
itertools = "0.14.0"
ldap3 = "^0.12"
md-5 = "0.10.6"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = { version = "4" }
teloxide = { version = "0.17", features = ["macros"] }
thiserror = "2.0"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["trace"] }
tower-sessions = "0.14"
tracing = "0.1"
uuid = { version = "1.22", features = ["v4"] }

[dependencies.axum-extra]
version = "0.12"
features = ["cookie", "cookie-signed", "cookie-key-expansion", "form", "query"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter", "fmt"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
    "ipnetwork",
]

[dev-dependencies]
async_cell = "0.2.3"
fake = "4"
rand = "0.10"
reqwest = { version = "0.13", features = ["cookies"] }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = { version = "1" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
